--- a/pages/services.html
+++ b/pages/services.html
@@ -119,7 +119,7 @@
     <!-- I didn’t go missing, David. The FBI knew where I was the entire time! I got these at a showroom in Paris. I got these on a clearance rack at Target.OK, yeah, I still actually had a few more verses. And in the last verse, I really get to showcase my range.</p> -->
   </section>
   <section class="immersive-section">
-    <h3 id="interactive">Interactive Content</h3>
+    <h3 id="interactive">Immersive Content</h3>
     
       </section>
 
