index: footer navigation added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,23 @@
     <!-- Logo -->
   <a href="#" tabindex="0" class="wc-brand">
     <img src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a>
+
+    <p>Penn State World Campus is committed to making its websites accessible to all users, and welcomes comments or suggestions on access improvements. Please send comments or suggestions on accessibility to <a href="mailto:accessibility@outreach.psu.edu">accessibility@outreach.psu.edu</a>.</p>
+
+    <ul class="footer-navigation box">
+      <li><a href="http://www.psu.edu/web-privacy-statement">Privacy</a></li>
+      <li>
+        <a href="http://guru.psu.edu/policies/AD85.html">Non-discrimination</a>
+      </li>
+      <li>
+        <a href="http://guru.psu.edu/policies/OHR/hr11.html">Equal Opportunity</a>
+      </li>
+      <li>
+        <a href="http://www.psu.edu/copyright-information">Copyright</a>
+      </li>
+      <li>
+        <a href="http://www.psu.edu/">The Pennsylvania State University © <script type="text/javascript">today=new Date(); y0=today.getFullYear();document.write(y0);</script>2023</a></li>
+    </ul>
     <!-- <div class="footer-left">
       <h3>Connect with our MM Team: </h3><span class="contact">@MMEmail</span>
     </div>
