--- a/index.html
+++ b/index.html
@@ -116,12 +116,15 @@
 
   <footer class="blue">
     <!-- Logo -->
-    <a href="#" tabindex="0" class="wc-brand">
-      <img src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a>
-    <div class="footer-text">
-      <p>Penn State World Campus is committed to making its websites accessible to all users, and welcomes comments or suggestions on access improvements. Please send comments or suggestions on accessibility to <a href="mailto:accessibility@outreach.psu.edu">accessibility@outreach.psu.edu</a>.</p>
+    <div class="footer-text-logo">
+      <a href="#" tabindex="0" class="wc-brand">
+        <img src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" />
+      </a>
+
+      <div class="footer-text">
+        <p>Penn State World Campus is committed to making its websites accessible to all users, and welcomes comments or suggestions on access improvements. Please send comments or suggestions on accessibility to <a href="mailto:accessibility@outreach.psu.edu">accessibility@outreach.psu.edu</a>.</p>
+      </div>
     </div>
-    
     <ul class="footer-navigation box">
       <li><a href="http://www.psu.edu/web-privacy-statement">Privacy</a></li>
       <li>
