--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <p>Penn State World Campus is committed to making its websites accessible to all users, and welcomes comments or suggestions on access improvements. Please send comments or suggestions on accessibility to <a href="mailto:accessibility@outreach.psu.edu">accessibility@outreach.psu.edu</a>.</p>
       </div>
     </div>
+    <hr class="lt-blue">
     <ul class="footer-navigation box">
       <li><a href="http://www.psu.edu/web-privacy-statement">Privacy</a></li>
       <li>
