index: navigation styling adjustment, update to windowSize listener

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </div>
   <!-- End Mobile Nav -->
   <!-- Logo -->
-  <a href="#" tabindex="0" class="wc-brand">
-    <img class="wc-logo" src="/assets/images/PSU_Logo_blue.png" alt="Penn State World Campus Logo" /></a>
+  <!-- <a href="#" tabindex="0" class="wc-brand">
+    <img class="wc-logo" src="/assets/images/PSU_Logo_blue.png" alt="Penn State World Campus Logo" /></a> -->
   <nav id="main_nav">
     <div class="logo">
       <a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a>
