--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -169,7 +169,33 @@
     <h3 id="interactive">Interactive Content</h3>
     <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!</p>
   </section>
+  <footer class="blue">
+    <!-- Logo -->
+    <div class="footer-text-logo">
+      <a href="#" tabindex="0" class="wc-brand">
+        <img src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" />
+      </a>
 
+      <div class="footer-text">
+        <p>Penn State World Campus is committed to making its websites accessible to all users, and welcomes comments or suggestions on access improvements. Please send comments or suggestions on accessibility to <a href="mailto:accessibility@outreach.psu.edu">accessibility@outreach.psu.edu</a>.</p>
+      </div>
+    </div>
+    <hr class="lt-blue">
+    <ul class="footer-navigation box">
+      <li><a href="http://www.psu.edu/web-privacy-statement">Privacy</a></li>
+      <li>
+        <a href="http://guru.psu.edu/policies/AD85.html">Non-discrimination</a>
+      </li>
+      <li>
+        <a href="http://guru.psu.edu/policies/OHR/hr11.html">Equal Opportunity</a>
+      </li>
+      <li>
+        <a href="http://www.psu.edu/copyright-information">Copyright</a>
+      </li>
+      <li>
+        <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University © <script type="text/javascript">today=new Date(); y0=today.getFullYear();document.write(y0);</script></a></li>
+    </ul>
+  </footer>
 <script src="../src/index.js"></script>
 </body>
 </html>
