--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,74 @@
   <link href="../styles/main.css" rel="stylesheet">
 </head>
 <body>
-  <header>Navigation will go here</header>
+  <header>
+    <!-- Mobile Nav -->
+    <div id="hamburger_nav" class="hidden">
+      <button class="nav-btn open-btn">
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
+    <div class="nav nav-purple">
+      <div class="nav nav-teal">
+        <div class="nav nav-med-blue">
+          <button class="nav-btn close-btn">
+            <i class="fas fa-times"></i>
+          </button>
+          <img src="../assets/images/logo.svg" alt="Logo" class="logo">
+          
+          <ul class="list">
+            <li><a href="#">EXPLORE</a></li>
+            <li>
+              <ul>
+                <li><a href="#">Video & Audio</a></li>
+                <li><a href="#">Visual Design</a></li>
+                <li><a href="#">Interactives</a></li>
+                <li><a href="#">Immersive</a></li>
+              </ul>
+            </li>
+            <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
+            <li>
+              <ul>
+                <li><a href="#">Visual Design</a></li>
+                <li><a href="#">360/Poser</a></li>
+              </ul>
+            </li>
+            <li><a href="#">ABOUT</a></li>
+            <li>
+              <ul>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </li>
+            <li><a href="#">RESOURCES</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  <!-- End Mobile Nav -->
+  <!-- Logo -->
+    <!-- <img class="wc-logo" src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a> -->
+  <!-- Main Navigation -->
+  <nav class="dark-blue-500" id="main_nav">
+    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
+    <ul>
+      <li tabindex="0"><a href="#">What We Do</a></li>
+      <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+        <div class="nav-dropdown">
+          <ul>
+            <li><a href="./portfolio.html#video">Video & Audio</a></li>
+            <li><a href="./portfolio.html#design">Visual Design</a></li>
+            <li><a href="./portfolio.html#interactive">Interactive</a></li>
+            <li><a href="./portfolio.html#immersive">Immersive</a></li>
+          </ul>
+        </div>
+      </li>
+      <li tabindex="0"><a href="./resources.html">Resources</a></li>
+      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <div class="work-container">
     <p class="work">
       Content with what all we provide for our unit.
