--- a/pages/services.html
+++ b/pages/services.html
@@ -101,13 +101,15 @@
   </section>
   
   <section class="design-section">
-    <div class="design-image">
-      <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
-    </div>
-    <div class="design-text service-card-text">
-      <h3 id="design" class="service-card-title">Design & Graphics</h3>
-      <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
-      <a href="./portfolio.html#design" class="view-more">View More</a>
+    <div class="service-card">
+      <div class="design-image">
+        <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
+        </div>
+      <div class="design-text service-card-text">
+        <h3 id="design" class="service-card-title">Design & Graphics</h3>
+        <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
+        <a href="./portfolio.html#design" class="view-more">View More</a>
+      </div>
     </div>
   </section>
   <section class="interactive-page">
