--- a/pages/services.html
+++ b/pages/services.html
@@ -94,7 +94,7 @@
         <a class="view-more" href="./portfolio.html#video">View More</a>
       </div>
 
-      <div class="video-image col">
+      <div class="service-image col">
         <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
       </div>
     </div>
@@ -102,7 +102,7 @@
   
   <section class="design-section">
     <div class="service-card">
-      <div class="design-image">
+      <div class="service-image">
         <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
         </div>
       <div class="design-text service-card-text">
