Service: added interactive piece

--- a/pages/services.html
+++ b/pages/services.html
@@ -89,7 +89,7 @@
   <section id="video-section" class="video-section">
     <div class="service-card">
       <div class="service-card-text video-text col">
-        <h3 class="video-section-title service-card-title">Video & Audio </h3>
+        <h3 class="service-card-title">Video & Audio </h3>
         <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
         <a class="view-more" href="./portfolio.html#video">View More</a>
       </div>
@@ -104,8 +104,8 @@
     <div class="service-card">
       <div class="service-image">
         <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
-        </div>
-      <div class="design-text service-card-text">
+      </div>
+      <div class="service-card-text">
         <h3 id="design" class="service-card-title">Design & Graphics</h3>
         <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
         <a href="./portfolio.html#design" class="view-more">View More</a>
@@ -113,16 +113,20 @@
     </div>
   </section>
   <section class="interactive-page">
-    <h3 id="design">Interactive</h3>
-    <!-- <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!
+    <div class="service-card">
+      <div class="service-card-text video-text col">
+        <h3 class="service-card-title">Interactive Content </h3>
+        <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+        <a class="view-more" href="./portfolio.html#interactive">View More</a>
+      </div>
 
-    You smell very flammable right now. Do I wear my fringed vest? Or, more importantly, do I wear anything under it? We’re drinking to me not becoming an alcoholic.My name is Alexis, and yes, I did not finish high school. Um, it’s this long, boring story involving a yacht, and a famous soccer player, and like a ton of mushrooms. The internet is a breeding ground for freaks. -->
-  
-    <!-- I didn’t go missing, David. The FBI knew where I was the entire time! I got these at a showroom in Paris. I got these on a clearance rack at Target.OK, yeah, I still actually had a few more verses. And in the last verse, I really get to showcase my range.</p> -->
+      <div class="service-image col">
+        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="475" height="330">
+      </div>
   </section>
-  <section class="immersive-section">
+  <!-- <section class="immersive-section">
     <h3 id="interactive">Immersive Content</h3>
-  </section>
+  </section> -->
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
