--- a/pages/services.html
+++ b/pages/services.html
@@ -116,7 +116,7 @@
     <div class="service-card">
       <div class="service-card-text video-text col">
         <h3 class="service-card-title">Interactive Content </h3>
-        <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+        <p>Simulation/Interactive/360 Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
         <a class="view-more" href="./portfolio.html#interactive">View More</a>
       </div>
 
