TODO note added for mobile navigation updates. Also,  link bug fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </button>
         <img src="./assets/images/logo.svg" alt="Logo" class="logo">
         <ul class="list">
-          <li><a href="#">EXPLORE</a></li>
+          <!-- TODO:MAKE SURE ALL REPLICATE NAVIGATION AND ADD CLASS FOR UPPERCASE -->
+          <li><a href="#">WHAT WE DO</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
           <li>
             <ul>
               <li><a href="#">Video & Audio</a></li>
@@ -77,7 +79,7 @@
           </div>
         </li>
         <li><a href="pages/resources.html">Resources</a></li>
-        <li class="drop-down-two"><a href="./pages/about.html">Contact</a></li>
+        <li class="drop-down-two"><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
