TODO note added

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
+  <!-- TODO: fix logo, add footer -->
   <!-- Main Navigation -->
   <nav class="dark-blue-500" id="main_nav">
     <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
