Mobile navigation: updated menu items, working on updating colors based on background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="nav-btn close-btn">
           <i class="fas fa-times"></i>
         </button>
-        <img src="./assets/images/logo.svg" alt="Logo" class="logo">
+        <img src="/assets/images/WCLD_white.png" alt="WCLD MM Studio Logo" class="logo">
         <ul class="list">
           <!-- TODO:MAKE SURE ALL REPLICATE NAVIGATION AND ADD CLASS FOR UPPERCASE -->
           <li><a href="#">WHAT WE DO</a></li>
@@ -38,22 +38,8 @@
               <li><a href="#">Immersive</a></li>
             </ul>
           </li>
-          <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
-          <li>
-            <ul>
-              <li><a href="#">Visual Design</a></li>
-              <li><a href="#">360/Poser</a></li>
-            </ul>
-          </li>
-          <li><a href="#">ABOUT</a></li>
-          <li>
-            <ul>
-              <li><a href="#">What We Do</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </li>
           <li><a href="#">RESOURCES</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
     </div>
