Mobile navigation: updates made to UI

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <img src="/assets/images/WCLD_white.png" alt="WCLD MM Studio Logo" class="logo">
         <ul class="list">
           <!-- TODO:MAKE SURE ALL REPLICATE NAVIGATION AND ADD CLASS FOR UPPERCASE -->
-          <li><a href="pages/services.html">WHAT WE DO</a></li>
+          <li><a href="pages/services.html">What we do</a></li>
           <li><a href="pages/portfolio.html">PORTFOLIO</a></li>
-          <li>
+          <!-- <li>
             <ul>
               <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
               <li><a href="pages/portfolio.html#design">Visual Design</a></li>
               <li><a href="pages/portfolio.html#interactive">Interactives</a></li>
               <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="pages/resources.html">RESOURCES</a></li>
           <li><a href="pages/contact.html">CONTACT</a></li>
         </ul>
