--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     </section>
   </main>
 
+<!-- FOOTER -->
+
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
@@ -128,18 +130,6 @@
       <li>
         <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University © <script type="text/javascript">today=new Date(); y0=today.getFullYear();document.write(y0);</script></a></li>
     </ul>
-    <!-- <div class="footer-left">
-      <h3>Connect with our MM Team: </h3><span class="contact">@MMEmail</span>
-    </div>
-    <div class="footer-right">
-      <h3 class="menu">Menu</h3>
-      <ul class="menu-nav">
-        <li><a href="./pages/explore.html">Explore</a></li>
-        <li><a href="./pages/trends.html">Trends</a></li>
-        <li><a href="./pages/about.html">About</a></li>
-        <li><a href="./pages/resources.html">Resources</a></li>
-      </ul>
-    </div> -->
   </footer>
 
   <script src="../src/index.js"></script>
