--- a/pages/resources.html
+++ b/pages/resources.html
@@ -57,5 +57,7 @@
         <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University © <script type="text/javascript">today=new Date(); y0=today.getFullYear();document.write(y0);</script></a></li>
     </ul>
   </footer>
+
+  <script src="../src/index.js"></script>
 </body>
 </html>
