fix for navigation on resources page

--- a/pages/services.html
+++ b/pages/services.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="../styles/services.css">
 </head>
-<body class="services">
+
+<body>
   <header>
     <!-- Mobile Nav -->
     <div id="hamburger_nav" class="hidden">
