--- a/pages/services.html
+++ b/pages/services.html
@@ -88,16 +88,18 @@
   <h2 class="main-title center blue-underline">What We Do</h2>
 
   <section id="video-section" class="video-section">
-    <div class="service-card">
+    <div class="service-card reverse">
+      <div class="service-image">
+        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
+      </div>
+
       <div class="service-card-text video-text col">
         <h3 class="service-card-title">Video & Audio </h3>
         <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
         <a class="view-more" href="./portfolio.html#video">View More</a>
       </div>
 
-      <div class="service-image col">
-        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
-      </div>
+      
     </div>
   </section>
   
@@ -114,7 +116,7 @@
     </div>
   </section>
   <section class="interactive-page">
-    <div class="service-card">
+    <div class="service-card reverse">
       <div class="service-card-text video-text col">
         <h3 class="service-card-title">Interactive Content </h3>
         <p>Simulation/Interactive/360 Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
