Page add, navigation updates

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
               <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
               <li><a href="pages/portfolio.html#design">Visual Design</a></li>
               <li><a href="pages/portfolio.html#interactive">Interactive</a></li>
-              <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
             </ul>
           </div>
         </li>
+        <li><a href="pages/journal.html">Journal</a></li>
         <li><a href="pages/resources.html">Resources</a></li>
         <li class="drop-down-two"><a href="pages/contact.html">Contact</a></li>
       </ul>
