--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -67,10 +67,10 @@
               <li><a href="portfolio.html#video">Video & Audio</a></li>
               <li><a href="portfolio.html#design">Visual Design</a></li>
               <li><a href="portfolio.html#interactive">Interactive</a></li>
-              <li><a href="portfolio.html#immersive">Immersive</a></li>
             </ul>
           </div>
         </li>
+        <li tabindex="0"><a href="pages/journal.html">Journal</a></li>
         <li tabindex="0"><a href="./resources.html">Resources</a></li>
         <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
       </ul>
@@ -156,11 +156,7 @@
   
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
-      <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!
-
-      You smell very flammable right now. Do I wear my fringed vest? Or, more importantly, do I wear anything under it? We’re drinking to me not becoming an alcoholic.My name is Alexis, and yes, I did not finish high school. Um, it’s this long, boring story involving a yacht, and a famous soccer player, and like a ton of mushrooms. The internet is a breeding ground for freaks.
-  
-      I didn’t go missing, David. The FBI knew where I was the entire time! I got these at a showroom in Paris. I got these on a clearance rack at Target.OK, yeah, I still actually had a few more verses. And in the last verse, I really get to showcase my range.</p>
+      <p>Before and After example section</p>
   </section>
   <section class="interactive-page">
     <h3 id="design">Interactive</h3>
