--- a/pages/services.html
+++ b/pages/services.html
@@ -70,10 +70,10 @@
             <li><a href="./portfolio.html#video">Video & Audio</a></li>
             <li><a href="./portfolio.html#design">Visual Design</a></li>
             <li><a href="./portfolio.html#interactive">Interactive</a></li>
-            <li><a href="./portfolio.html#immersive">Immersive</a></li>
           </ul>
         </div>
       </li>
+      <li tabindex="0"><a href="./journal.html">Journal</a></li>
       <li tabindex="0"><a href="./resources.html">Resources</a></li>
       <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
     </ul>
