Add new page to mobile nav

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
             </ul>
           </li> -->
+          <li><a href="pages/journal.html">Journal</a></li>
           <li><a href="pages/resources.html">RESOURCES</a></li>
           <li><a href="pages/contact.html">CONTACT</a></li>
         </ul>
