Navigation style updates

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a>
     </div>
       <ul>
-        <li><a href="pages/services.html">What We Do</a></li>
-        <li class="drop-down"><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#1A3651" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+        <li class="nav-list-item"><a href="pages/services.html">What We Do</a></li>
+        <li class="drop-down nav-list-item"><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#1A3651" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
           <div class="nav-dropdown" tabindex="0">
             <ul>
               <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
@@ -64,9 +64,9 @@
             </ul>
           </div>
         </li>
-        <li><a href="pages/journal.html">Journal</a></li>
-        <li><a href="pages/resources.html">Resources</a></li>
-        <li class="drop-down-two"><a href="pages/contact.html">Contact</a></li>
+        <li class="nav-list-item"><a href="pages/journal.html">Journal</a></li>
+        <li class="nav-list-item"><a href="pages/resources.html">Resources</a></li>
+        <li class="nav-list-item"><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
