Developing before/after example section

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -157,6 +157,19 @@
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
       <p>Before and After example section</p>
+      <div class="before-after-container">
+        <div class="before-section">
+          <h3 class="before-title">Before</h3>
+          <img src="" alt="" class="before-image">
+        </div>
+        <div class="divider"></div>
+        <div class="after-section">
+          <h3 class="after-title">After</h3>
+          <img src="" alt="" class="after-image">
+        </div>
+        
+
+      </div>
   </section>
   <section class="interactive-page">
     <h3 id="design">Interactive</h3>
