Example images upload and added

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -160,12 +160,12 @@
       <div class="before-after-container">
         <div class="before-section">
           <h3 class="before-title">Before</h3>
-          <img src="" alt="" class="before-image">
+          <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image">
         </div>
         <div class="divider"></div>
         <div class="after-section">
           <h3 class="after-title">After</h3>
-          <img src="" alt="" class="after-image">
+          <img src="/assets/images/MBADM830_After.png" alt="" class="after-image">
         </div>
         
 
