Before_After example section build

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -156,7 +156,7 @@
   
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
-      <p>Before and After example section</p>
+      <p>Short intro text explaining Before and After example section?</p>
       <div class="before-after-container">
         <div class="before-section">
           <h3 class="before-title">Before</h3>
@@ -165,7 +165,7 @@
         <div class="divider"></div>
         <div class="after-section">
           <h3 class="after-title">After</h3>
-          <img src="/assets/images/MBADM830_After.png" alt="" class="after-image" loading="lazy">
+          <img src="/assets/images/MBADM830_After.png" alt="" width="500" height="500" class="after-image" loading="lazy">
         </div>
         
 
