Media query update and padding add to main nav

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Logo -->
   <!-- <a href="#" tabindex="0" class="wc-brand">
     <img class="wc-logo" src="/assets/images/PSU_Logo_blue.png" alt="Penn State World Campus Logo" /></a> -->
-  <nav id="main_nav">
+  <nav id="main_nav" class="main-nav">
     <div class="logo">
       <a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a>
     </div>
