--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -157,6 +157,7 @@
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
       <p>Short intro text explaining Before and After example section?</p>
+      <h3>500x500 Vertical</h3>
       <div class="before-after-container">
         <div class="before-section">
           <h3 class="before-title">Before</h3>
