Before_After example section - horizontal build out

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -157,20 +157,31 @@
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
       <p>Short intro text explaining Before and After example section?</p>
-      <h3>500x500 Vertical</h3>
-      <div class="before-after-container">
-        <div class="before-section">
-          <h3 class="before-title">Before</h3>
-          <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image" width="500" height="500" loading="lazy">
-        </div>
-        <div class="divider"></div>
-        <div class="after-section">
-          <h3 class="after-title">After</h3>
-          <img src="/assets/images/MBADM830_After.png" alt="" width="500" height="500" class="after-image" loading="lazy">
-        </div>
-        
 
-      </div>
+      <h3>500x500 Vertical</h3>
+        <div class="before-after-container">
+          <div class="before-section">
+            <h3 class="before-title">Before</h3>
+            <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image" width="500" height="500" loading="lazy">
+          </div>
+          <div class="divider"></div>
+          <div class="after-section">
+            <h3 class="after-title">After</h3>
+            <img src="/assets/images/MBADM830_After.png" alt="" width="500" height="500" class="after-image" loading="lazy">
+          </div>
+        </div>
+
+      <h3>Horizontal</h3>
+        <div class="before-after-container">
+          <div class="before-section-horizontal">
+            <h3 class="before-title">Before</h3>
+            <img src="/assets/images/MBADM830_Before_L8.png" alt="" class="before-image" loading="lazy">
+          </div>
+          <div class="divider-horizontal"></div>
+          <div class="after-section-horizontal">
+            <h3 class="after-title">After</h3>
+            <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
+          </div>
   </section>
   <section class="interactive-page">
     <h3 id="design">Interactive</h3>
