media-scroller: box-shadow taken out, adding in buttons for UX

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -101,6 +101,12 @@
     <div class="media-scroller-container">
       <h4>Video Delivery Types</h4>
       <div class="media-scroller snaps-inline" tabindex="0">
+        <div class="media-scroller-header">
+          <div class="media-scroller-icons">
+            <div class="media-scroller-icon-left"></div>
+            <div class="media-scroller-icon-right"></div>
+          </div>
+        </div>
         <div class="media-element">
           <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="370" frameborder="0"></iframe>
           <p class="title">Course Introduction</p>
@@ -170,7 +176,6 @@
             <img src="/assets/images/MBADM830_After.png" alt="" width="500" height="500" class="after-image" loading="lazy">
           </div>
         </div>
-
       <h3>Horizontal</h3>
         <div class="before-after-container">
           <div class="before-section-horizontal">
