media-scroller: update to media-scroller-header-icons position

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -100,13 +100,14 @@
       <!-- Media Scroller -->
     <div class="media-scroller-container">
       <h4>Video Delivery Types</h4>
-      <div class="media-scroller snaps-inline" tabindex="0">
-        <div class="media-scroller-header">
-          <div class="media-scroller-icons">
-            <div class="media-scroller-icon-left"></div>
-            <div class="media-scroller-icon-right"></div>
-          </div>
+      <div class="media-scroller-header">
+        <div class="media-scroller-icons">
+          <button class="media-scroller-icon-left">  <span><svg viewBox="0 0 32 32" aria-hidden="true" class="Icon-c11n-8-104-2__sc-13llmml-0 kbgqGE IconChevronLeft-c11n-8-104-2__sc-ddr5cu-0 gmBsZB" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg></span></button>
+          <button class="media-scroller-icon-right"></button>
         </div>
+      </div>
+      <div class="media-scroller snaps-inline" tabindex="0">
+        
         <div class="media-element">
           <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="370" frameborder="0"></iframe>
           <p class="title">Course Introduction</p>
