--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -110,8 +110,8 @@
           </button>
         </div>
       </div>
+
       <div class="media-scroller snaps-inline" tabindex="0">
-        
         <div class="media-element">
           <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="370" frameborder="0"></iframe>
           <p class="title">Course Introduction</p>
@@ -121,7 +121,7 @@
         
         <div class="media-element">
           <!-- TODO replace with v7 -->
-          <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2356971/sp/235697100/embedIframeJs/uiconf_id/41416911/partner_id/2356971?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_rj7gw8s5&amp;flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[hotspots.plugin]=1&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&amp;wid=1_3x27ypfp" width="560" height="350" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>  
+          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_rj7gw8s5&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_ra9wqw3o%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="Morning at the Barn(s)"></iframe>
           <p class="title">An even longer title on this one</p>
           <span class="sr-only"><a href="#">2</a></span>
         </div>
