--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -113,20 +113,21 @@
 
       <div class="media-scroller snaps-inline" tabindex="0">
         <div class="media-element">
-          <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="370" frameborder="0"></iframe>
-          <p class="title">Course Introduction</p>
+          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_rj7gw8s5&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_ra9wqw3o%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="Morning at the Barn(s)"></iframe>
+          <p class="title">Course Introduction Video</p>
           <p class="sub-title">ANC107 - Introduction to Equine Science</p>
           <span class="sr-only"><a href="#">1</a></span>
         </div>
         
         <div class="media-element">
-          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_rj7gw8s5&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_ra9wqw3o%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="Morning at the Barn(s)"></iframe>
-          <p class="title">An even longer title on this one</p>
+          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 346px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
+          <p class="title">Course Introduction Video</p>
+          <p class="sub-title">PSYCH441 - Healthy Psychology</p>
           <span class="sr-only"><a href="#">2</a></span>
         </div>
         <div class="media-element" >
-          <img src="https://images.unsplash.com/photo-1643223723262-7ce785730cf6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">A dog that's blinking?</p>
+          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 346px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
+          <p class="title">PSYCH441</p>
           <span class="sr-only"><a href="#">3</a></span>
         </div>
         <div class="media-element">
