bug fix for media scroller

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -102,10 +102,10 @@
       <h4>Video Delivery Types</h4>
       <div class="media-scroller-header">
         <div class="media-scroller-icons">
-          <button class="media-scroller-icon left">  
+          <button class="media-scroller-icon left" id="scroll_left">  
             <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-left" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
           </button> 
-          <button class="media-scroller-icon right">
+          <button class="media-scroller-icon right" id="scroll_right">
             <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-right" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
           </button>
         </div>
