--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -232,5 +232,6 @@
     </ul>
   </footer>
 <script src="../src/index.js"></script>
+<script src="../src/media-scroller.js"></script>
 </body>
 </html>
