bug fix for mobile nav, todo added

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,7 +13,7 @@
   <header>
     <!-- Mobile Nav -->
     <div id="hamburger_nav" class="hidden">
-      <button class="nav-btn open-btn-dk-bg">
+      <button class="nav-btn open-btn  open-btn-dk-bg">
         <i class="fas fa-bars"></i>
       </button>
     </div>
