--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -96,10 +96,9 @@
   <section id="video-section" class="video-section">
     <h2 class="center">Video & Audio </h2>
     <div class="video-example">
-      <!-- <h3>Course Introduction Hype Videos</h3> -->
-      <!-- Media Scroller -->
-    <div class="media-scroller-container">
-      <h4>Video Delivery Types</h4>
+    <!-- Media Scroller -->
+      <h4 class="media-scroller-title">Video Delivery Types</h4>
+      <div class="media-scroller-container">      
       <div class="media-scroller-header">
         <div class="media-scroller-icons">
           <button class="media-scroller-icon left" id="scroll_left">  
