--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -69,15 +69,14 @@
               <li><a href="portfolio.html#interactive">Interactive</a></li>
             </ul>
           </div>
-        </li>
-        <li tabindex="0"><a href="pages/journal.html">Journal</a></li>
+        </li> 
+        <li tabindex="0"><a href="./journal.html">Journal</a></li>
         <li tabindex="0"><a href="./resources.html">Resources</a></li>
         <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <div class="top-blue">
-    <!-- <div class="hex-pattern"></div> -->
     <h1 class="md-center fade-in">Let us help you transform your content!</h1>
     <div class="icon-style-container icon-fade-in">
       <div class="icon-fade">
