Mobile navigation updates

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,7 +26,7 @@
           <img src="../assets/images/logo.svg" alt="Logo" class="logo">
           
           <ul class="list">
-            <li><a href="#">EXPLORE</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li>
               <ul>
                 <li><a href="#">Video & Audio</a></li>
