--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,31 +26,19 @@
           <img src="../assets/images/logo.svg" alt="Logo" class="logo">
           
           <ul class="list">
+            <li><a href="#">What We Do</a></li>
             <li><a href="#">Portfolio</a></li>
             <li>
               <ul>
                 <li><a href="#">Video & Audio</a></li>
                 <li><a href="#">Visual Design</a></li>
-                <li><a href="#">Interactives</a></li>
-                <li><a href="#">Immersive</a></li>
+                <li><a href="#">Interactive Content</a></li>
               </ul>
             </li>
-            <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
-            <li>
-              <ul>
-                <li><a href="#">Visual Design</a></li>
-                <li><a href="#">360/Poser</a></li>
-              </ul>
-            </li>
-            <li><a href="#">ABOUT</a></li>
-            <li>
-              <ul>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </li>
-            <li><a href="#">RESOURCES</a></li>
+            <li><a href="#">Journal</a></li>
+            
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
