Update mobile nav logo sizing

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,7 +23,9 @@
           <button class="nav-btn close-btn">
             <i class="fas fa-times"></i>
           </button>
-          <img src="../assets/images/logo.svg" alt="Logo" class="logo">
+          <a class="mobile-logo" href="../index.html">
+            <img src="../assets/images/WCLD_white.png" alt="Logo" class="logo">
+          </a>
           
           <ul class="list">
             <li><a href="#">What We Do</a></li>
