TODOs added for mobile nav on portfolio page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,6 +12,8 @@
 <body class="services">
   <header>
     <!-- Mobile Nav -->
+     <!-- TODO: Update links -->
+    <!-- TODO: Update text when hover -->
     <div id="hamburger_nav" class="hidden">
       <button class="nav-btn open-btn  open-btn-dk-bg">
         <i class="fas fa-bars"></i>
