--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -28,21 +28,20 @@
           <a class="mobile-logo" href="../index.html">
             <img src="../assets/images/WCLD_white.png" alt="Logo" class="logo">
           </a>
-          
+
           <ul class="list">
-            <li><a href="#">What We Do</a></li>
+            <li><a href="/pages/services.html">What We Do</a></li>
             <li><a href="#">Portfolio</a></li>
             <li>
               <ul>
-                <li><a href="#">Video & Audio</a></li>
-                <li><a href="#">Visual Design</a></li>
-                <li><a href="#">Interactive Content</a></li>
+                <li><a href="/pages/portfolio.html#video">Video & Audio</a></li>
+                <li><a href="/pages/portfolio.html#design">Visual Design</a></li>
+                <li><a href="/pages/portfolio.html#interactive">Interactive Content</a></li>
               </ul>
             </li>
-            <li><a href="#">Journal</a></li>
-            
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/pages/journal.html">Journal</a></li>
+            <li><a href="/pages/resources.html">Resources</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
