mobile nav fix for index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <!-- Mobile Nav -->
   <div id="hamburger_nav" class="hidden" aria-label="Mobile menu">
-    <button class="nav-btn open-btn">
+    <button class="mobile-nav-open-btn open-btn">
       <i class="fas fa-bars"></i>
     </button>
   </div>
