mobile nav updates to index page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,8 +12,8 @@
 <body class="services">
   <header>
     <!-- Mobile Nav -->
-    <div id="hamburger_nav" class="hidden">
-      <button class="nav-btn open-btn  open-btn-dk-bg">
+    <div id="hamburger_nav" class="hidden" aria-label="mobile menu">
+      <button class="nav-btn open-btn open-btn-dk-bg">
         <i class="fas fa-bars"></i>
       </button>
     </div>
@@ -26,7 +26,6 @@
           <a class="mobile-logo" href="../index.html">
             <img src="../assets/images/WCLD_white.png" alt="Logo" class="logo">
           </a>
-
           <ul class="list">
             <li><a href="/pages/services.html">What We Do</a></li>
             <li><a href="#">Portfolio</a></li>
