--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body class="main">
-
   <header>
     <!-- Mobile Nav -->
   <div id="hamburger_nav" class="hidden" aria-label="Mobile menu">
@@ -25,29 +24,28 @@
         <button class="nav-btn close-btn">
           <i class="fas fa-times"></i>
         </button>
-        <img src="/assets/images/WCLD_white.png" alt="WCLD MM Studio Logo" class="logo">
+        <a class="mobile-logo" href="#">
+          <img src="/assets/images/WCLD_white.png" alt="Logo" class="logo">
+        </a>
         <ul class="list">
           <li><a href="pages/services.html">What we do</a></li>
-          <li><a href="pages/portfolio.html">PORTFOLIO</a></li>
-          <!-- <li>
+          <li><a href="pages/portfolio.html">Portfolio</a></li>
+          <li>
             <ul>
               <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
               <li><a href="pages/portfolio.html#design">Visual Design</a></li>
-              <li><a href="pages/portfolio.html#interactive">Interactives</a></li>
-              <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
+              <li><a href="pages/portfolio.html#interactive">Interactive Content</a></li>
             </ul>
-          </li> -->
-          <li><a href="pages/journal.html">Journal</a></li>
-          <li><a href="pages/resources.html">RESOURCES</a></li>
-          <li><a href="pages/contact.html">CONTACT</a></li>
+          </li>
+          <li><a href="/pages/journal.html">Journal</a></li>
+          <li><a href="/pages/resources.html">Resources</a></li>
+          <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </div>
   <!-- End Mobile Nav -->
-  <!-- Logo -->
-  <!-- <a href="#" tabindex="0" class="wc-brand">
-    <img class="wc-logo" src="/assets/images/PSU_Logo_blue.png" alt="Penn State World Campus Logo" /></a> -->
+
   <nav id="main_nav" class="main-nav">
     <div class="logo">
       <a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a>
