Content note add

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -159,6 +159,7 @@
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
       <p>Short intro text explaining Before and After example section?</p>
+      <p>Do we add about course refreshments?</p>
 <!-- TODO update responsive images -->
       <h3>500x500 Vertical</h3>
         <div class="before-after-container">
@@ -188,10 +189,7 @@
     <h3 id="design">Interactive</h3>
     <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!</p>
   </section>
-  <section class="immersive-section">
-    <h3 id="interactive">Interactive Content</h3>
-    <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!</p>
-  </section>
+  
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
