Content added: H5P and quick snippet of text

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -159,7 +159,7 @@
   <section class="design-section">
     <h2 class="center" id="design">Design</h2>
       <p>Short intro text explaining Before and After example section?</p>
-      <p>Do we add about course refreshments?</p>
+      <p>Do we add about course refreshments? Everiz/highcharts?</p>
 <!-- TODO update responsive images -->
       <h3>500x500 Vertical</h3>
         <div class="before-after-container">
@@ -187,7 +187,17 @@
   </section>
   <section class="interactive-page">
     <h3 id="design">Interactive</h3>
-    <p>If those bunnies feel exploited even a little bit, I am pulling the plug. I haven’t bedazzled anything since I was 22. I’m incapable of faking sincerity. There’s nothing here but hot singles in my area. But people love extreme vanity… and they love puppies!</p>
+    <p> From our H5P instance, demonstrating various content types and offering inspiration for transforming course materials into engaging, interactive experiences.</p>
+    <div style="min-width: 750px; max-width: 1080px;">
+      <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="OL3400_SignificantLearning" frameborder="0" height="637" src="https://psu.h5p.com/content/1291925922613556468/embed" width="1088">
+      </iframe>
+    </div>
+    <script src="https://psu.h5p.com/js/h5p-resizer.js" charset="UTF-8">
+    </script>
+    <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="LowEQ/HighEQ" frameborder="0" height="637" src="https://psu.h5p.com/content/1291194875423351928/embed" width="1088">
+    </iframe>
+    <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="Immigration_Module01_Timeline" frameborder="0" height="637" src="https://psu.h5p.com/content/1290994433362158788/embed" width="1088">
+    </iframe>
   </section>
   
   <footer class="blue">
