--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -165,12 +165,12 @@
         <div class="before-after-container">
           <div class="before-section">
             <h3 class="before-title">Before</h3>
-            <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image" width="500" height="500" loading="lazy">
+            <img src="/assets/images/MBADM830_Before.png" alt="" class="before-image"  loading="lazy">
           </div>
           <div class="divider"></div>
           <div class="after-section">
             <h3 class="after-title">After</h3>
-            <img src="/assets/images/MBADM830_After.png" alt="" width="500" height="500" class="after-image" loading="lazy">
+            <img src="/assets/images/MBADM830_After.png" alt=""  class="after-image" loading="lazy">
           </div>
         </div>
       <h3>Horizontal</h3>
