--- a/pages/journal.html
+++ b/pages/journal.html
@@ -7,6 +7,7 @@
   <title>MM - Resources</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/journal.css">
 </head>
 
 <body class="services">
@@ -78,7 +79,35 @@
     </ul>
   </nav>
 </header>
-  <h1>Latest Articles</h1>
+<section class="blog-articles"></section>
+    <h1>Latest Articles</h1>
+
+    <div class="blog-articles-container">
+      <div class="blog-article-card">
+        <a href="#" class="blog-link"></a>
+        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        <h2>Using AI in Photoshop</h2>
+        <div class="blog-article-card-author">Veronica Terrill</div>
+      </div>
+
+
+      <div class="blog-article-card">
+        <a href="#" class="blog-link"></a>
+        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        <h2>Using AI in Photoshop</h2>
+        <div class="blog-article-card-author">Veronica Terrill</div>
+      </div>
+
+
+      <div class="blog-article-card">
+        <a href="#" class="blog-link"></a>
+        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        <h2>Using AI in Photoshop</h2>
+        <div class="blog-article-card-author">Veronica Terrill</div>
+      </div>
+    </div> 
+  </section> 
+
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
