--- a/pages/journal.html
+++ b/pages/journal.html
@@ -13,8 +13,8 @@
 <body class="services">
   <header>
     <!-- Mobile Nav -->
-    <div id="hamburger_nav" class="hidden">
-      <button class="nav-btn open-btn">
+    <div id="hamburger_nav" class="hidden" aria-label="mobile menu">
+      <button class="nav-btn open-btn open-btn-dk-bg">
         <i class="fas fa-bars"></i>
       </button>
     </div>
@@ -24,62 +24,50 @@
           <button class="nav-btn close-btn">
             <i class="fas fa-times"></i>
           </button>
-          <img src="../assets/images/logo.svg" alt="Logo" class="logo">
-          
+          <a class="mobile-logo" href="../index.html">
+            <img src="../assets/images/WCLD_white.png" alt="Logo" class="logo">
+          </a>
           <ul class="list">
-            <li><a href="#">EXPLORE</a></li>
+            <li><a href="/pages/services.html">What We Do</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li>
               <ul>
-                <li><a href="#">Video & Audio</a></li>
-                <li><a href="#">Visual Design</a></li>
-                <li><a href="#">Interactives</a></li>
-                <li><a href="#">Immersive</a></li>
+                <li><a href="/pages/portfolio.html#video">Video & Audio</a></li>
+                <li><a href="/pages/portfolio.html#design">Visual Design</a></li>
+                <li><a href="/pages/portfolio.html#interactive">Interactive Content</a></li>
               </ul>
             </li>
-            <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
-            <li>
-              <ul>
-                <li><a href="#">Visual Design</a></li>
-                <li><a href="#">360/Poser</a></li>
-              </ul>
-            </li>
-            <li><a href="#">ABOUT</a></li>
-            <li>
-              <ul>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </li>
-            <li><a href="#">RESOURCES</a></li>
+            <li><a href="/pages/journal.html">Journal</a></li>
+            <li><a href="/pages/resources.html">Resources</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
     </div>
-  <!-- End Mobile Nav -->
-  <!-- Logo -->
-    <!-- <img class="wc-logo" src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a> -->
-  <!-- Main Navigation -->
-  <nav class="dark-blue-500" id="main_nav">
-    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
-    <ul>
-      <li tabindex="0"><a href="./services.html">What We Do</a></li>
-      <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
-        <div class="nav-dropdown">
-          <ul>
-            <li><a href="./portfolio.html#video">Video & Audio</a></li>
-            <li><a href="./portfolio.html#design">Visual Design</a></li>
-            <li><a href="./portfolio.html#interactive">Interactive</a></li>
-          </ul>
-        </div>
-      </li>
-      <li tabindex="0"><a href="./journal.html">Journal</a></li>
-      <li tabindex="0"><a href="./resources.html">Resources</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-<section class="blog-articles"></section>
+    <!-- End Mobile Nav -->
+
+    
+    <!-- Main Navigation -->
+    <nav class="dark-blue-500 explore-nav" id="main_nav">
+      <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
+      <ul>
+        <li tabindex="0"><a href="services.html">What We Do</a></li>
+        <li class="drop-down" tabindex="0" ><a href="#">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+          <div class="nav-dropdown">
+            <ul>
+              <li><a href="portfolio.html#video">Video & Audio</a></li>
+              <li><a href="portfolio.html#design">Visual Design</a></li>
+              <li><a href="portfolio.html#interactive">Interactive</a></li>
+            </ul>
+          </div>
+        </li> 
+        <li tabindex="0"><a href="./journal.html">Journal</a></li>
+        <li tabindex="0"><a href="./resources.html">Resources</a></li>
+        <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+<section class="blog-articles">
     <h1>Latest Articles</h1>
 
     <div class="blog-articles-container">
