Added function to observe hamburger position

--- a/pages/journal.html
+++ b/pages/journal.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../styles/journal.css">
 </head>
 
-<body class="services">
+<body>
   <header>
     <!-- Mobile Nav -->
     <div id="hamburger_nav" class="hidden" aria-label="mobile menu">
